--- a/bfsbackend/src/main/resources/application.properties
+++ b/bfsbackend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.show_sql=true
+spring.jpa.hibernate.format_sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/bfsbackend
+spring.datasource.username=root
+spring.datasource.password=rlaalsdn0678
+server.port=8090
